@@ -1806,6 +1806,7 @@ static struct text_object *construct_text_object(const char *s,
 	END OBJ(i8k_right_fan_rpm, INFO_I8K)
 	END OBJ(i8k_ac_status, INFO_I8K)
 	END OBJ(i8k_buttons_status, INFO_I8K)
+#if defined(IBM)
 	END OBJ(ibm_fan, 0)
 	END OBJ(ibm_temps, 0)
 		if (!arg) {
@@ -1819,6 +1820,7 @@ static struct text_object *construct_text_object(const char *s,
 		obj->data.sensor = atoi(&arg[0]);
 	END OBJ(ibm_volume, 0)
 	END OBJ(ibm_brightness, 0)
+#endif
 	END OBJ_IF(if_up, 0)
 		if (!arg) {
 			ERR("if_up needs an argument");
@@ -4166,6 +4168,7 @@ static void generate_text_internal(char *p, int p_max_size,
 			OBJ(i8k_buttons_status) {
 				snprintf(p, p_max_size, "%s", i8k.buttons_status);
 			}
+#if defined(IBM)
 			OBJ(ibm_fan) {
 				get_ibm_acpi_fan(p, p_max_size);
 			}
@@ -4180,6 +4183,7 @@ static void generate_text_internal(char *p, int p_max_size,
 			OBJ(ibm_brightness) {
 				get_ibm_acpi_brightness(p, p_max_size);
 			}
+#endif /* IBM */
 			OBJ(if_up) {
 				if ((obj->data.ifblock.s)
 						&& (!interface_up(obj->data.ifblock.s))) {
