@@ -3,10 +3,6 @@
 
 #include "common.h"
 
-void get_ibm_acpi_fan(char *buf, size_t client_buffer_size);
-void get_ibm_acpi_temps(void);
-void get_ibm_acpi_volume(char *buf, size_t client_buffer_size);
-void get_ibm_acpi_brightness(char *buf, size_t client_buffer_size);
 const char *get_disk_protect_queue(const char *);
 
 struct i8k_struct {
@@ -23,12 +19,6 @@ struct i8k_struct {
 };
 
 struct i8k_struct i8k;
-
-struct ibm_acpi_struct {
-	int temps[8];
-};
-
-struct ibm_acpi_struct ibm_acpi;
 
 int interface_up(const char *dev);
 char *get_ioscheduler(char *);
